--- a/KN_Order_Storage/Views/Client/Delete.cshtml
+++ b/KN_Order_Storage/Views/Client/Delete.cshtml
@@ -17,7 +17,7 @@
             @Html.DisplayNameFor(model => model.ct_client_source)
         </dt>
 
-        @if (Model.ct_client_source.Trim() != WebConstants.SearchOther)
+        @if (Model.ct_client_source.Trim() != WebConstants.cSearchOther)
         {
             <dd>
                 @Html.DisplayFor(model => model.ct_client_source)
