--- a/KN_Order_Storage/Views/Client/Details.cshtml
+++ b/KN_Order_Storage/Views/Client/Details.cshtml
@@ -16,7 +16,7 @@
 			@Html.DisplayNameFor(model => model.ct_client_source)
 		</dt>
 
-		@if (Model.ct_client_source != WebConstants.SearchOther)
+		@if (Model.ct_client_source != WebConstants.cSearchOther)
 		{
 			<dd>
 				@Html.DisplayFor(model => model.ct_client_source)
