--- a/KN_Order_Storage/Views/Client/Create.cshtml
+++ b/KN_Order_Storage/Views/Client/Create.cshtml
@@ -87,8 +87,8 @@
             @Html.LabelFor(model => model.ct_reach_status, new { @class = "control-label col-md-2" })           
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.ct_reach_status, new List<SelectListItem> {
-                        new SelectListItem(){Text = WebConstants.ClientReachStatusN, Value = WebConstants.ClientReachStatusN}
-                        , new SelectListItem(){Text = WebConstants.ClientReachStatusR, Value = WebConstants.ClientReachStatusR}
+                        new SelectListItem(){Text = WebConstants.cClientReachStatusN, Value = WebConstants.cClientReachStatusN}
+                        , new SelectListItem(){Text = WebConstants.cClientReachStatusR, Value = WebConstants.cClientReachStatusR}
                     }, new { @class = "btn btn-default dropdown-toggle col-md-2" })    
                 @Html.ValidationMessageFor(model => model.ct_reach_status)
             </div>
@@ -98,9 +98,9 @@
             @Html.LabelFor(model => model.ct_order_status, new { @class = "control-label col-md-2" })           
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.ct_order_status, new List<SelectListItem> {
-                        new SelectListItem(){Text = WebConstants.ClientOrderStatusN, Value = WebConstants.ClientOrderStatusN}
-                        , new SelectListItem(){Text = WebConstants.ClientOrderStatusO, Value = WebConstants.ClientOrderStatusO}
-                        , new SelectListItem(){Text = WebConstants.ClientOrderStatusD, Value = WebConstants.ClientOrderStatusD}
+                        new SelectListItem(){Text = WebConstants.cClientOrderStatusN, Value = WebConstants.cClientOrderStatusN}
+                        , new SelectListItem(){Text = WebConstants.cClientOrderStatusO, Value = WebConstants.cClientOrderStatusO}
+                        , new SelectListItem(){Text = WebConstants.cClientOrderStatusD, Value = WebConstants.cClientOrderStatusD}
                     }, new { @class = "btn btn-default dropdown-toggle col-md-2" })
                 @Html.ValidationMessageFor(model => model.ct_order_status)
             </div>
