--- a/KN_Order_Storage/Views/Order/Edit.cshtml
+++ b/KN_Order_Storage/Views/Order/Edit.cshtml
@@ -1,11 +1,12 @@
 ﻿@model KN_Order_Storage.or_order
+@using KN_Order_Storage.Common
 
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>编辑订单</h2>
 
 
 @using (Html.BeginForm())
@@ -13,182 +14,188 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>or_order</h4>
+        @*<h4>订单</h4>*@
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.or_order_id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ct_client_id, "ct_client_id", new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("ct_client_id", String.Empty)
-                @Html.ValidationMessageFor(model => model.ct_client_id)
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.ct_client.ct_client_source, new { @class = "control-label col-md-4" })
+                @Html.DropDownListFor(model => model.ct_client.ct_client_source, (List<SelectListItem>)ViewBag.Source,
+                                        new { @id = "sourceDropDown", @class = "col-md-2 btn btn-default dropdown-toggle" })
+                @Html.ValidationMessageFor(model => model.ct_client.ct_client_source)&nbsp;
+                @Html.EditorFor(model => model.ct_client.ct_client_source_cst, new { @id = "sourceCSTEditor", @class = "col-md-6" })
+                @Html.ValidationMessageFor(model => model.ct_client.ct_client_source_cst)
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_order_type, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.or_order_type)
+                    @Html.ValidationMessageFor(model => model.or_order_type)
+                </div>
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.or_order_type, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_order_type)
-                @Html.ValidationMessageFor(model => model.or_order_type)
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.ct_client.ct_client_name, new { @class = "control-label col-md-4" })
+                @Html.EditorFor(model => model.ct_client.ct_client_name)
+                @Html.ValidationMessageFor(model => model.ct_client.ct_client_name)
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_order_status, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownListFor(model => model.or_order_status, new List<SelectListItem> {
+                        new SelectListItem(){Text = WebConstants.cOrderStatusO, Value = WebConstants.cOrderStatusO}
+                        , new SelectListItem(){Text = WebConstants.cOrderStatusR, Value = WebConstants.cOrderStatusR}
+                        , new SelectListItem(){Text = WebConstants.cOrderStatusG, Value = WebConstants.cOrderStatusG}
+                    }, new { @class = "btn btn-default dropdown-toggle col-md-3" })
+                    @Html.ValidationMessageFor(model => model.or_order_status)
+                </div>
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.in_inventory_id, "in_inventory_id", new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("in_inventory_id", String.Empty)
-                @Html.ValidationMessageFor(model => model.in_inventory_id)
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.ct_client.ct_client_tel, new { @class = "control-label col-md-4" })
+                @Html.EditorFor(model => model.ct_client.ct_client_tel)
+                @Html.ValidationMessageFor(model => model.ct_client.ct_client_tel)
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_order_time, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.or_order_time)
+                    @Html.ValidationMessageFor(model => model.or_order_time)
+                </div>
             </div>
         </div>
 
         <div class="form-group">
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_s_shoulder, new { @class = "control-label col-md-4" })
+                @Html.EditorFor(model => model.or_s_shoulder)
+                @Html.ValidationMessageFor(model => model.or_s_shoulder)
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_delivered_time, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.or_delivered_time)
+                    @Html.ValidationMessageFor(model => model.or_delivered_time)
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_s_chest, new { @class = "control-label col-md-4" })
+                @Html.EditorFor(model => model.or_s_chest)
+                @Html.ValidationMessageFor(model => model.or_s_chest)
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_style_id, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.or_style_id)
+                    @Html.ValidationMessageFor(model => model.or_style_id)
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_s_waist, new { @class = "control-label col-md-4" })
+                @Html.EditorFor(model => model.or_s_waist)
+                @Html.ValidationMessageFor(model => model.or_s_waist)
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_style_name, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.or_style_name)
+                    @Html.ValidationMessageFor(model => model.or_style_name)
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_s_buttocks, new { @class = "control-label col-md-4" })
+                @Html.EditorFor(model => model.or_s_buttocks)
+                @Html.ValidationMessageFor(model => model.or_s_buttocks)
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_handled_by, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.or_handled_by)
+                    @Html.ValidationMessageFor(model => model.or_handled_by)
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_s_stature, new { @class = "control-label col-md-4" })
+                @Html.EditorFor(model => model.or_s_stature)
+                @Html.ValidationMessageFor(model => model.or_s_stature)
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_price, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.or_price)
+                    @Html.ValidationMessageFor(model => model.or_price)
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_s_length, new { @class = "control-label col-md-4" })
+                @Html.EditorFor(model => model.or_s_length)
+                @Html.ValidationMessageFor(model => model.or_s_length)
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_amount, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.or_amount)
+                    @Html.ValidationMessageFor(model => model.or_amount)
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_s_shoes, new { @class = "control-label col-md-4" })
+                @Html.EditorFor(model => model.or_s_shoes)
+                @Html.ValidationMessageFor(model => model.or_s_shoes)
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_order_no, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.or_order_no)
+                    @Html.ValidationMessageFor(model => model.or_order_no)
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-xs-6">
+                <div class="col-md-offset-4">
+                    <input type="submit" value="保存" class="btn btn-default" />
+                </div>
+            </div>
+            <div class="col-xs-6">
+                @Html.LabelFor(model => model.or_remark, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.or_remark)
+                    @Html.ValidationMessageFor(model => model.or_remark)
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group hide">
             @Html.LabelFor(model => model.or_status, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.or_status)
                 @Html.ValidationMessageFor(model => model.or_status)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_from, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_from)
-                @Html.ValidationMessageFor(model => model.or_from)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_order_time, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_order_time)
-                @Html.ValidationMessageFor(model => model.or_order_time)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_delivered_time, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_delivered_time)
-                @Html.ValidationMessageFor(model => model.or_delivered_time)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_style_id, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_style_id)
-                @Html.ValidationMessageFor(model => model.or_style_id)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_style_name, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_style_name)
-                @Html.ValidationMessageFor(model => model.or_style_name)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_handled_by, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_handled_by)
-                @Html.ValidationMessageFor(model => model.or_handled_by)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_price, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_price)
-                @Html.ValidationMessageFor(model => model.or_price)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_amount, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_amount)
-                @Html.ValidationMessageFor(model => model.or_amount)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_remark, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_remark)
-                @Html.ValidationMessageFor(model => model.or_remark)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_s_shoulder, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_s_shoulder)
-                @Html.ValidationMessageFor(model => model.or_s_shoulder)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_s_chest, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_s_chest)
-                @Html.ValidationMessageFor(model => model.or_s_chest)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_s_waist, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_s_waist)
-                @Html.ValidationMessageFor(model => model.or_s_waist)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_s_buttocks, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_s_buttocks)
-                @Html.ValidationMessageFor(model => model.or_s_buttocks)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_s_stature, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_s_stature)
-                @Html.ValidationMessageFor(model => model.or_s_stature)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_s_length, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_s_length)
-                @Html.ValidationMessageFor(model => model.or_s_length)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_s_shoes, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_s_shoes)
-                @Html.ValidationMessageFor(model => model.or_s_shoes)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.or_order_status, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.or_order_status)
-                @Html.ValidationMessageFor(model => model.or_order_status)
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
