--- a/KN_Order_Storage/Views/Order/Delete.cshtml
+++ b/KN_Order_Storage/Views/Order/Delete.cshtml
@@ -1,17 +1,119 @@
 ﻿@model KN_Order_Storage.or_order
+@using KN_Order_Storage.Common
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "删除客户";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+@*<h2>删除</h2>*@
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>确定要删除这条记录？</h3>
 <div>
-    <h4>or_order</h4>
+    @*<h4>订单</h4>*@
     <hr />
-    <dl class="dl-horizontal">
+    <dl class="dl-horizontal col-xs-6">
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ct_client.ct_client_source)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ct_client.ct_client_source)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ct_client.ct_client_name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ct_client.ct_client_name)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ct_client.ct_client_tel)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ct_client.ct_client_tel)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.or_s_shoulder)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.or_s_shoulder)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.or_s_chest)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.or_s_chest)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.or_s_waist)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.or_s_waist)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.or_s_buttocks)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.or_s_buttocks)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.or_s_stature)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.or_s_stature)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.or_s_length)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.or_s_length)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.or_s_shoes)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.or_s_shoes)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.or_remark)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.or_remark)
+        </dd>
+
+    </dl>
+
+    <dl class="dl-horizontal col-xs-6">
+
+        @*<dt>
+                @Html.DisplayNameFor(model => model.or_status)
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.or_status)
+            </dd>*@
+
         <dt>
             @Html.DisplayNameFor(model => model.or_order_type)
         </dt>
@@ -21,11 +123,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.or_status)
+            @Html.DisplayNameFor(model => model.or_order_status)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.or_status)
+            @Html.DisplayFor(model => model.or_order_status)
         </dd>
 
         <dt>
@@ -93,91 +195,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.or_remark)
+            @Html.DisplayNameFor(model => model.or_order_no)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.or_remark)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.or_s_shoulder)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.or_s_shoulder)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.or_s_chest)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.or_s_chest)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.or_s_waist)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.or_s_waist)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.or_s_buttocks)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.or_s_buttocks)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.or_s_stature)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.or_s_stature)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.or_s_length)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.or_s_length)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.or_s_shoes)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.or_s_shoes)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.or_order_status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.or_order_status)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ct_client.ct_client_source)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ct_client.ct_client_source)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.in_inventory.in_inventory_type)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.in_inventory.in_inventory_type)
+            @Html.DisplayFor(model => model.or_order_no)
         </dd>
 
     </dl>
@@ -186,8 +208,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="删除" class="btn btn-default" /> |
+            @Html.ActionLink("返回列表", "Index")
         </div>
     }
 </div>
